--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   </head>
 
   <body>
+    <section id='body'>
     <header>
-      <img src="img/logo.png" alt="logo Alura" />
+      <img id='logoAlura' src="img/logo.png" alt="logo Alura" />
       <nav>¡ Bienvenido al Encriptador ONE !</nav>
     </header>
 
@@ -79,6 +80,7 @@
         </section>
       </section>
     </main>
+    </section>
     <footer id="footer">
       <p>Lorena De La Riva</p>
     </footer>
