arreglando alineaciones y posicion footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id='body'>
     <header>
       <img id='logoAlura' src="img/logo.png" alt="logo Alura" />
-      <nav>¡ Bienvenido al Encriptador ONE !</nav>
+      <nav>¡ BienvenidX al Encriptador ONE !</nav>
     </header>
 
     <main>
